1.99.11
- PEAR::HTML_Template_Flexy was updated to 1.2.5
- PHP closing tag was removed from all files

1.99.10
- TinyFCK was updated to 0.16 (TinyMCE 2.0.8)
- some TinyMCE options were changes to get better XHTML strict validation (align was removed)
- Bulgarian translation was added (thanks to Angel Grancharov)
- P4A_DB_Source::getAll always returns an array (fixing a bug on PEAR::MDB2)
- P4A_Table now goes to page one if current page is empty
- constant P4A_FIELD_CLASS was added so now you can extend P4A_Field and tell the system what field class to use
- apply icon was added (32x32)
- scriptaculous was update to 1.6.5

1.99.9 - Thank you to mechano (http://www.mechanicamente.it) for the second donation!
- window's title was added to sample applications
- strict validation bugfixes on P4A_Widget were done
- a typo in P4A_DB_Source::dropFilter() was fixed
- a bug with clone() function (php<5) was fixed

1.99.8 - Thank you to zukunft.com for the first donation!
- P4A_DB_Source::getFilters now works also with multivalue fields
- function htmlspecialchars_decode was added if php<5.0
- Serbian translation was added (thanks to Pedja)
- Hindi translation was added (thank to Prashant Singh Pawar)
- a bug on P4A_Field::getAsImage() was fixed
- phpThumb was updated to 1.7.4
- some errors with date_caledar languages were fixed (P4A_I18N_DATE_CALENDAR_LANGUAGE was introduced in format files)
- CREDITS file was removed, all credits are in the CHANGELOG

1.99.7
- some bugs with multiple rich_textarea and ajax events were fixed
- Turkish translation was added (thanks to Ilyas Toker)
- a bug with disabled rich_textareas was solved

1.99.6
- beforeMovement and afterMovement event triggers were added to P4A_DB_Navigator
- P4A_Table_Navigation_Bar now says "page 1 of 1" instead of "page 1 of 0" if data source is empty
- a bugfix on P4A_Data_Source::firstRow() was done
- javascript code for setFocus() function was simplified
- javascript code for onReturnPress() function was changed