@@ -1,6 +1,10 @@
 1.99.11
+- P4A_Frame::clean() was added
 - PEAR::HTML_Template_Flexy was updated to 1.2.5
 - PHP closing tag was removed from all files
+- P4A_Widget::onKeyUp() was added
+- P4A_Widget::onKeyDown() was added
+- Keyboard keycode now is passed as param for P4A_Widget::onKeyUp(),onKeyDown(),onKeyPress() events
 
 1.99.10
 - TinyFCK was updated to 0.16 (TinyMCE 2.0.8)
